# twenty-forty-eight-rs

./: .gitignore  Cargo.toml  README.md  release_windows.sh
src/: main.rs
